--- a/src/blocks/card/__delete-button/card__delete-button.css
+++ b/src/blocks/card/__delete-button/card__delete-button.css
@@ -2,7 +2,6 @@
   width: 18px;
   height: 18px;
   background: transparent url('../../../images/delete-icon.svg') center no-repeat;
-  /*Потом это будет из модификатора*/
   background-size: 18px 18px;
   border: none;
   cursor: pointer;
@@ -20,4 +19,13 @@
 
 .card__delete-button:hover {
   opacity: 0.6;
+}
+
+.popup_type_confirm-delete .popup__title {
+  margin-bottom: 20px;
+}
+
+.popup_type_confirm-delete .popup__button {
+  width: 100%;
+  margin-top: 10px;
 }
