--- a/src/blocks/profile/__image/profile__image.css
+++ b/src/blocks/profile/__image/profile__image.css
@@ -9,6 +9,12 @@
   margin: 0 29px 0 0;
 }
 
+.profile__image:hover {
+  cursor: pointer;
+  transform: scale(0.95) translateY(-1px);
+  transition: transform 0.3s ease;
+}
+
 @media screen and (max-width: 740px) {
   .profile__image {
     margin: 0 10px 0 0;
